Improving the documentation of assets_download.R functions + creation of new tests + updating the readme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ export(stac_collections)
 export(stac_items)
 export(stac_request)
 export(stac_search)
+importFrom(curl,curl_download)
 importFrom(curl,curl_fetch_memory)
 importFrom(curl,handle_setheaders)
 importFrom(curl,new_handle)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,validate)
+importFrom(progress,progress_bar)
