--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: rstac
 Title: R client library for SpatioTemporal Asset Catalog (rstac)
-Version: 0.1.2
+Version: 0.1.3
 Authors@R: 
     c(person("Brazil Data Cube Team", email = "brazildatacube@dpi.inpe.br", 
              role = c("cph", "cre")),
       person("Rolf", "Simoes", email = "rolf.simoes@inpe.br",
              role = c("aut"),
              comment = c(ORCID = "0000-0003-0953-4132")),
-      person("Felipe", "Souza", email = "lipecaso@gmail.com", role = c("aut")))
+      person("Felipe", "Carvalho", email = "lipecaso@gmail.com", role = c("aut")))
 Description: 
     R client library for STAC is a R package that interfaces STAC API 
     endpoints.
