--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rstac
 Title: R Client Library for SpatioTemporal Asset Catalog
-Version: 0.1.4
+Version: 0.1.5
 Authors@R: 
     c(person("Brazil Data Cube Team", email = "brazildatacube@dpi.inpe.br", 
              role = c("cph", "cre")),
@@ -25,6 +25,4 @@ Suggests:
     covr,
     magrittr,
     testthat,
-    vcr,
-    knitr,
-    rmarkdown
+    vcr
