--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rstac
 Title: R Client Library for SpatioTemporal Asset Catalog
-Version: 0.1.5
+Version: 0.1.6
 Authors@R: 
     c(person("Brazil Data Cube Team", email = "brazildatacube@dpi.inpe.br", 
              role = c("cph", "cre")),
@@ -20,7 +20,9 @@ LazyData: true
 RoxygenNote: 7.1.1
 Depends:
     jsonlite,
-    httr
+    httr,
+    tibble,
+    crayon
 Suggests: 
     covr,
     magrittr,
