--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,stac)
 S3method(print,stac_catalog)
 S3method(print,stac_collection)
 S3method(print,stac_item)
+S3method(print,stac_items)
 export(assets_download)
 export(get_request)
 export(items_fetch)
