implements `ext_query` function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,stac_collection)
 S3method(print,stac_item)
 S3method(print,stac_items)
 export(assets_download)
+export(ext_query)
 export(get_request)
 export(items_fetch)
 export(items_length)
