--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,16 +8,16 @@ S3method(print,stac_collection)
 S3method(print,stac_item)
 S3method(print,stac_items)
 export(assets_download)
+export(collections)
 export(ext_query)
 export(get_request)
+export(items)
 export(items_fetch)
 export(items_length)
 export(items_matched)
 export(post_request)
+export(search_s)
 export(stac)
-export(stac_collections)
-export(stac_items)
-export(stac_search)
 importFrom(crayon,bold)
 importFrom(httr,GET)
 importFrom(httr,POST)
