Update funcions names and refactoring tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,8 @@ export(items_fetch)
 export(items_length)
 export(items_matched)
 export(post_request)
-export(search_s)
 export(stac)
+export(stac_search)
 importFrom(crayon,bold)
 importFrom(httr,GET)
 importFrom(httr,POST)
