--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ S3method(print,stac_item)
 S3method(print,stac_items)
 export(assets_download)
 export(collections)
-export(ext_query)
+export(extension_query)
 export(get_request)
 export(items)
 export(items_fetch)
