Create a function to verify STAC version and update documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,stac_catalog)
 S3method(print,stac_collection)
 S3method(print,stac_item)
 S3method(print,stac_items)
+S3method(print,stac_list_collection)
 export(assets_download)
 export(collections)
 export(content_get_response)
