Update NAMESPACE and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(check_query_verb)
 export(collections)
 export(content_response)
 export(ext_query)
+export(get_assets_name)
 export(get_doc_query)
 export(get_endpoint)
 export(get_request)
