--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(content_response)
 export(ext_query)
 export(get_doc_query)
 export(get_request)
+export(get_subfields)
 export(items)
 export(items_fetch)
 export(items_length)
@@ -58,6 +59,7 @@ export(stac)
 export(stac_search)
 export(stac_version)
 export(subclass)
+export(subfields)
 importFrom(crayon,bold)
 importFrom(httr,GET)
 importFrom(httr,POST)
