Update DESCRIPTION and NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,12 +49,6 @@ export(items_fetch)
 export(items_length)
 export(items_matched)
 export(post_request)
-export(repr_html.RSTACQuery)
-export(repr_html.STACCatalog)
-export(repr_html.STACCollection)
-export(repr_html.STACCollectionList)
-export(repr_html.STACItem)
-export(repr_html.STACItemCollection)
 export(stac)
 export(stac_search)
 export(stac_version)
@@ -68,3 +62,6 @@ importFrom(httr,content)
 importFrom(httr,http_type)
 importFrom(httr,status_code)
 importFrom(httr,write_disk)
+importFrom(utils,head)
+importFrom(utils,modifyList)
+importFrom(utils,tail)
