introduces items_bbox and items_datetime functions closes #15

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,8 @@ export(get_endpoint)
 export(get_request)
 export(get_subfields)
 export(items)
+export(items_bbox)
+export(items_datetime)
 export(items_fetch)
 export(items_length)
 export(items_matched)
