Add function 'items_bands'; closes #15

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(get_endpoint)
 export(get_request)
 export(get_subfields)
 export(items)
+export(items_bands)
 export(items_bbox)
 export(items_datetime)
 export(items_fetch)
