change function names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,14 +18,14 @@ S3method(before_request,search)
 S3method(before_request,stac)
 S3method(check_subclass,RSTACDocument)
 S3method(check_subclass,RSTACQuery)
-S3method(get_endpoint,RSTACQuery)
-S3method(get_endpoint,collection_id)
-S3method(get_endpoint,collections)
-S3method(get_endpoint,ext_query)
-S3method(get_endpoint,item_id)
-S3method(get_endpoint,items)
-S3method(get_endpoint,search)
-S3method(get_endpoint,stac)
+S3method(endpoint,RSTACQuery)
+S3method(endpoint,collection_id)
+S3method(endpoint,collections)
+S3method(endpoint,ext_query)
+S3method(endpoint,item_id)
+S3method(endpoint,items)
+S3method(endpoint,search)
+S3method(endpoint,stac)
 S3method(print,RSTACQuery)
 S3method(print,STACCatalog)
 S3method(print,STACCollection)
@@ -46,9 +46,9 @@ export(check_query_verb)
 export(check_subclass)
 export(collections)
 export(content_response)
+export(doc_query)
+export(endpoint)
 export(ext_query)
-export(get_doc_query)
-export(get_endpoint)
 export(get_request)
 export(get_subfields)
 export(items)
