--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,4 +73,5 @@ importFrom(httr,content)
 importFrom(httr,http_type)
 importFrom(httr,status_code)
 importFrom(httr,write_disk)
+importFrom(magrittr,"%>%")
 importFrom(utils,modifyList)
