--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,10 +17,13 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Depends:
+     R (>= 3.2)
+Imports:
     httr,
     crayon,
     utils,
-    magrittr
+    magrittr,
+    geojsonlint
 Suggests:
     covr,
     testthat,
