--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,5 +75,6 @@ importFrom(httr,content)
 importFrom(httr,http_type)
 importFrom(httr,status_code)
 importFrom(httr,write_disk)
+importFrom(jsonlite,validate)
 importFrom(magrittr,"%>%")
 importFrom(utils,modifyList)
