--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,9 +17,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Depends:
-     R (>= 3.2)
+    R (>= 3.2),
+    httr
 Imports:
-    httr,
     crayon,
     utils,
     magrittr,
