Update examples code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ S3method(stac_version,RSTACQuery)
 S3method(stac_version,STACCollectionList)
 S3method(subclass,RSTACDocument)
 S3method(subclass,RSTACQuery)
+export("%>%")
 export(RSTACDocument)
 export(RSTACQuery)
 export(after_response)
