--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ steps:
   image: brazildatacube/r-webservices:1.0.0
   commands:
   - R CMD build .
-  - R CMD check *tar.gz --as-cran
+  - R CMD check *.tar.gz --as-cran >&1 | tee stdfile && cat stdfile | grep -E "(WARNING)" > /dev/null | test $? -eq 1
 
 - name: coverage
   image: brazildatacube/r-webservices:1.0.0
