--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ steps:
   image: brazildatacube/r-webservices:1.0.0
   commands:
   - R CMD build .
-  - set -e; R CMD check *.tar.gz >&1 | tee stdfile && cat stdfile | (grep -E "(WARNING)" > /dev/null) && exit 1 || exit 0
+  - set -e; R CMD check *.tar.gz >&1 | tee stdfile && cat stdfile | (grep -E "(WARNING|ERROR)" > /dev/null) && exit 1 || exit 0
 
 - name: coverage
   image: brazildatacube/r-webservices:1.0.0
