update version and description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rstac
 Title: Client Library for SpatioTemporal Asset Catalog
-Version: 0.9.1-1
+Version: 0.9.1-2
 Authors@R: 
     c(person("Brazil Data Cube Team", 
             email = "brazildatacube@inpe.br",
@@ -9,7 +9,7 @@ Authors@R:
             role = c("cph")))
 Description: Provides functions to access, search and download spacetime earth 
     observation data via SpatioTemporal Asset Catalog (STAC). This package 
-    supports the version 0.8.1 or higher of the STAC specification
+    supports the version 1.0.0 of the STAC specification
     (<http://stacspec.org>).
 License: MIT + file LICENSE
 URL: https://github.com/brazil-data-cube/rstac
