Introduces 'items_sign' function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,8 +62,11 @@ export(items_group)
 export(items_length)
 export(items_matched)
 export(items_reap)
+export(items_sign)
 export(omit_query_params)
 export(post_request)
+export(sign_bdc)
+export(sign_planetary_computer)
 export(stac)
 export(stac_search)
 export(stac_version)
