add 'path_row' parameter in items_matched and items_fetch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,4 +78,5 @@ importFrom(httr,status_code)
 importFrom(httr,write_disk)
 importFrom(jsonlite,validate)
 importFrom(magrittr,"%>%")
+importFrom(utils,URLdecode)
 importFrom(utils,modifyList)
