--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ S3method(endpoint,item_id)
 S3method(endpoint,items)
 S3method(endpoint,search)
 S3method(endpoint,stac)
+S3method(parse_params,ext_query)
+S3method(parse_params,search)
 S3method(print,RSTACQuery)
 S3method(print,STACCatalog)
 S3method(print,STACCollection)
@@ -63,6 +65,7 @@ export(items_length)
 export(items_matched)
 export(items_reap)
 export(omit_query_params)
+export(parse_params)
 export(post_request)
 export(stac)
 export(stac_search)
