--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rstac
 Title: Client Library for SpatioTemporal Asset Catalog
-Version: 0.9.1-4
+Version: 0.9.1-5
 Authors@R:
     c(person("Brazil Data Cube Team",
             email = "brazildatacube@inpe.br",
@@ -23,7 +23,8 @@ Imports:
     crayon,
     utils,
     magrittr,
-    jsonlite
+    jsonlite,
+    lifecycle
 Suggests:
     covr,
     testthat,
