add lifecycle package function in imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ importFrom(httr,http_type)
 importFrom(httr,status_code)
 importFrom(httr,write_disk)
 importFrom(jsonlite,validate)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(utils,URLdecode)
 importFrom(utils,modifyList)
