--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,20 @@ S3method(endpoint,item_id)
 S3method(endpoint,items)
 S3method(endpoint,search)
 S3method(endpoint,stac)
+S3method(items_assets,STACItem)
+S3method(items_assets,STACItemCollection)
+S3method(items_bbox,STACItem)
+S3method(items_bbox,STACItemCollection)
+S3method(items_datetime,STACItem)
+S3method(items_datetime,STACItemCollection)
+S3method(items_fetch,STACItem)
+S3method(items_fetch,STACItemCollection)
+S3method(items_fields,STACItem)
+S3method(items_fields,STACItemCollection)
+S3method(items_length,STACItem)
+S3method(items_length,STACItemCollection)
+S3method(items_matched,STACItem)
+S3method(items_matched,STACItemCollection)
 S3method(parse_params,ext_query)
 S3method(parse_params,search)
 S3method(print,RSTACQuery)
@@ -44,7 +58,9 @@ export(RSTACDocument)
 export(RSTACQuery)
 export(after_response)
 export(assets_download)
+export(assets_filter)
 export(assets_list)
+export(assets_select)
 export(before_request)
 export(check_query_verb)
 export(check_subclass)
@@ -55,6 +71,7 @@ export(endpoint)
 export(ext_query)
 export(get_request)
 export(items)
+export(items_assets)
 export(items_bands)
 export(items_bbox)
 export(items_datetime)
