--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,10 +8,10 @@ Authors@R:
     person(given = "National Institute for Space Research (INPE)",
             role = c("cph")))
 Description: Provides functions to access, search and download spacetime earth
-    observation data via SpatioTemporal Asset Catalog (STAC). This package
+    observation data via SpatioTemporal Asset Catalog (STAC). This package 
     supports the version 1.0.0 of the STAC specification
-    (<http://stacspec.org>). For further details see 
-    DOI: 10.1109/IGARSS47720.2021.9553518
+    (<http://stacspec.org>). 
+    For further details see Simoes et al. (2021) <doi:10.1109/IGARSS47720.2021.9553518>.
 License: MIT + file LICENSE
 URL: https://github.com/brazil-data-cube/rstac
 BugReports: https://github.com/brazil-data-cube/rstac/issues
