--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(after_response,item_id)
 S3method(after_response,items)
 S3method(after_response,search)
 S3method(after_response,stac)
+S3method(assets_download,STACItem)
+S3method(assets_download,STACItemCollection)
 S3method(assets_filter,STACItem)
 S3method(assets_filter,STACItemCollection)
 S3method(assets_select,STACItem)
@@ -30,6 +32,8 @@ S3method(endpoint,item_id)
 S3method(endpoint,items)
 S3method(endpoint,search)
 S3method(endpoint,stac)
+S3method(items_apply,STACItem)
+S3method(items_apply,STACItemCollection)
 S3method(items_assets,STACItem)
 S3method(items_assets,STACItemCollection)
 S3method(items_bbox,STACItem)
@@ -46,6 +50,8 @@ S3method(items_matched,STACItem)
 S3method(items_matched,STACItemCollection)
 S3method(items_next,STACItem)
 S3method(items_next,STACItemCollection)
+S3method(items_reap,STACItem)
+S3method(items_reap,STACItemCollection)
 S3method(items_sign,STACItem)
 S3method(items_sign,STACItemCollection)
 S3method(parse_params,ext_query)
@@ -67,6 +73,7 @@ export(RSTACQuery)
 export(after_response)
 export(assets_download)
 export(assets_filter)
+export(assets_gdalvfs)
 export(assets_list)
 export(assets_select)
 export(before_request)
@@ -79,6 +86,7 @@ export(endpoint)
 export(ext_query)
 export(get_request)
 export(items)
+export(items_apply)
 export(items_assets)
 export(items_bands)
 export(items_bbox)
