change function name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,7 +77,7 @@ export(.append_gdalvfs)
 export(RSTACDocument)
 export(RSTACQuery)
 export(after_response)
-export(assets_append_gdalvfs)
+export(assets_append_gdalvsi)
 export(assets_download)
 export(assets_filter)
 export(assets_list)
