add collate in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,4 +30,34 @@ Suggests:
     covr,
     testthat,
     vcr
+Collate:
+    'cql2-expr-funs.R'
+    'cql2-types.R'
+    'parse-utils.R'
+    'cql2-core.R'
+    'cql2-prints.R'
+    'cql2-enhancements.R'
+    'cql2-adv_comp.R'
+    'cql2.R'
+    'assets-funs.R'
+    'check-utils.R'
+    'collections-query.R'
+    'deprec-funs.R'
+    'document-funs.R'
+    'ext_filter.R'
+    'ext_query.R'
+    'extensions.R'
+    'items-funs.R'
+    'items-query.R'
+    'message-utils.R'
+    'print.R'
+    'query-funs.R'
+    'request.R'
+    'rstac.R'
+    'signatures.R'
+    'stac-query.R'
+    'stac_search.R'
+    'stac_version.R'
+    'url-utils.R'
+    'utils.R'
 Roxygen: list(markdown = TRUE)
