--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(.append_gdalvfs,s3)
 S3method(after_response,RSTACQuery)
 S3method(after_response,collection_id)
 S3method(after_response,collections)
+S3method(after_response,ext_filter)
 S3method(after_response,ext_query)
 S3method(after_response,item_id)
 S3method(after_response,items)
@@ -22,6 +23,7 @@ S3method(assets_select,STACItemCollection)
 S3method(before_request,RSTACQuery)
 S3method(before_request,collection_id)
 S3method(before_request,collections)
+S3method(before_request,ext_filter)
 S3method(before_request,ext_query)
 S3method(before_request,item_id)
 S3method(before_request,items)
@@ -32,11 +34,17 @@ S3method(check_subclass,RSTACQuery)
 S3method(endpoint,RSTACQuery)
 S3method(endpoint,collection_id)
 S3method(endpoint,collections)
+S3method(endpoint,ext_filter)
 S3method(endpoint,ext_query)
 S3method(endpoint,item_id)
 S3method(endpoint,items)
 S3method(endpoint,search)
 S3method(endpoint,stac)
+S3method(get_spatial,GEOMETRYCOLLECTION)
+S3method(get_spatial,list)
+S3method(get_spatial,sf)
+S3method(get_spatial,sfc)
+S3method(get_spatial,sfg)
 S3method(items_apply,STACItem)
 S3method(items_apply,STACItemCollection)
 S3method(items_assets,STACItem)
@@ -59,6 +67,7 @@ S3method(items_reap,STACItem)
 S3method(items_reap,STACItemCollection)
 S3method(items_sign,STACItem)
 S3method(items_sign,STACItemCollection)
+S3method(parse_params,ext_filter)
 S3method(parse_params,ext_query)
 S3method(parse_params,search)
 S3method(print,RSTACQuery)
@@ -67,11 +76,65 @@ S3method(print,STACCollection)
 S3method(print,STACCollectionList)
 S3method(print,STACItem)
 S3method(print,STACItemCollection)
+S3method(print,cql2_json)
+S3method(print,cql2_text)
 S3method(stac_version,RSTACDocument)
 S3method(stac_version,RSTACQuery)
 S3method(stac_version,STACCollectionList)
 S3method(subclass,RSTACDocument)
 S3method(subclass,RSTACQuery)
+S3method(text_not_op,cql2_between_op)
+S3method(text_not_op,cql2_in_op)
+S3method(text_not_op,cql2_isnull_op)
+S3method(text_not_op,cql2_like_op)
+S3method(text_not_op,default)
+S3method(to_json,character)
+S3method(to_json,cql2_between_op)
+S3method(to_json,cql2_comp_op)
+S3method(to_json,cql2_date)
+S3method(to_json,cql2_func)
+S3method(to_json,cql2_in_op)
+S3method(to_json,cql2_interval)
+S3method(to_json,cql2_isnull_op)
+S3method(to_json,cql2_like_op)
+S3method(to_json,cql2_logic_op)
+S3method(to_json,cql2_math_op)
+S3method(to_json,cql2_minus_op)
+S3method(to_json,cql2_not_op)
+S3method(to_json,cql2_prop_ref)
+S3method(to_json,cql2_spatial)
+S3method(to_json,cql2_spatial_op)
+S3method(to_json,cql2_temporal_op)
+S3method(to_json,cql2_timestamp)
+S3method(to_json,default)
+S3method(to_json,integer)
+S3method(to_json,list)
+S3method(to_json,logical)
+S3method(to_json,matrix)
+S3method(to_json,numeric)
+S3method(to_text,character)
+S3method(to_text,cql2_between_op)
+S3method(to_text,cql2_comp_op)
+S3method(to_text,cql2_date)
+S3method(to_text,cql2_func)
+S3method(to_text,cql2_in_op)
+S3method(to_text,cql2_interval)
+S3method(to_text,cql2_isnull_op)
+S3method(to_text,cql2_like_op)
+S3method(to_text,cql2_logic_op)
+S3method(to_text,cql2_math_op)
+S3method(to_text,cql2_minus_op)
+S3method(to_text,cql2_not_op)
+S3method(to_text,cql2_prop_ref)
+S3method(to_text,cql2_spatial)
+S3method(to_text,cql2_spatial_op)
+S3method(to_text,cql2_temporal_op)
+S3method(to_text,cql2_timestamp)
+S3method(to_text,default)
+S3method(to_text,integer)
+S3method(to_text,list)
+S3method(to_text,logical)
+S3method(to_text,numeric)
 export("%>%")
 export(.append_gdalvfs)
 export(RSTACDocument)
@@ -89,6 +152,7 @@ export(collections)
 export(content_response)
 export(doc_query)
 export(endpoint)
+export(ext_filter)
 export(ext_query)
 export(get_request)
 export(items)
