--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,7 +113,10 @@ S3method(to_json,logical)
 S3method(to_json,matrix)
 S3method(to_json,numeric)
 S3method(to_text,character)
+S3method(to_text,cql2_accenti_op)
+S3method(to_text,cql2_array_op)
 S3method(to_text,cql2_between_op)
+S3method(to_text,cql2_casei_op)
 S3method(to_text,cql2_comp_op)
 S3method(to_text,cql2_date)
 S3method(to_text,cql2_func)
