--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,9 @@ S3method(to_json,list)
 S3method(to_json,logical)
 S3method(to_json,matrix)
 S3method(to_json,numeric)
+S3method(to_json,sf)
+S3method(to_json,sfc)
+S3method(to_json,sfg)
 S3method(to_text,character)
 S3method(to_text,cql2_accenti_op)
 S3method(to_text,cql2_array_op)
@@ -138,6 +141,9 @@ S3method(to_text,integer)
 S3method(to_text,list)
 S3method(to_text,logical)
 S3method(to_text,numeric)
+S3method(to_text,sf)
+S3method(to_text,sfc)
+S3method(to_text,sfg)
 export("%>%")
 export(.append_gdalvfs)
 export(RSTACDocument)
